# HTTP_server

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: benchmarks.yml  build.yml  tests.yml
config/: default.conf  logging.conf
examples/: CMakeLists.txt
examples/simple_api/: main.cpp
examples/static_server/: main.cpp
include/handlers/: route_handler.hpp  static_file_handler.hpp
include/server/: connection.hpp  http_server.hpp  metrics.hpp  request.hpp  response.hpp  router.hpp
include/utils/: buffer.hpp  config.hpp  logger.hpp
scripts/: benchmark.sh  benchmark_all.sh  build.sh  profile.sh
src/: main.cpp
src/handlers/: route_handler.cpp  static_file_handler.cpp
src/server/: connection.cpp  http_server.cpp  request.cpp  response.cpp  router.cpp
src/utils/: buffer.cpp  config.cpp  logger.cpp
tests/: CMakeLists.txt
tests/benchmarks/: benchmark_server.cpp
tests/integration/: test_connections.cpp  test_server.cpp
tests/unit/: test_logger.cpp  test_request.cpp  test_response.cpp  test_router.cpp
www/: index.html
www/css/: style.css
www/js/: app.js
